--- a/angular.json
+++ b/angular.json
@@ -46,8 +46,13 @@
             "tsConfig": "tsconfig.app.json",
             "inlineStyleLanguage": "scss",
             "assets": ["src/favicon.ico", "src/assets"],
-            "styles": ["src/styles.scss", "src/assets/fonts/font-file.css"],
-            "scripts": ["node_modules/preline/dist/preline.js", "node_modules/topbar/topbar.min.js"]
+            "styles": ["src/styles.scss", 
+            "src/assets/fonts/font-file.css",
+            "node_modules/primeng/resources/themes/lara-light-blue/theme.css",
+            "node_modules/primeng/resources/primeng.min.css",
+            "node_modules/primeflex/primeflex.css"
+          ],
+            "scripts": ["node_modules/topbar/topbar.min.js"]
           },
           "configurations": {
             "production": {
@@ -102,7 +107,7 @@
             "inlineStyleLanguage": "scss",
             "assets": ["src/favicon.ico", "src/assets"],
             "styles": ["src/styles.scss", "src/assets/fonts/font-file.css"],
-            "scripts": ["node_modules/preline/dist/preline.js", "node_modules/topbar/topbar.min.js"]
+            "scripts": ["node_modules/topbar/topbar.min.js"]
           }
         }
       }
