--- a/angular.json
+++ b/angular.json
@@ -46,12 +46,14 @@
             "tsConfig": "tsconfig.app.json",
             "inlineStyleLanguage": "scss",
             "assets": ["src/favicon.ico", "src/assets"],
-            "styles": ["src/styles.scss", 
-            "src/assets/fonts/font-file.css",
-            "node_modules/primeng/resources/themes/lara-light-blue/theme.css",
-            "node_modules/primeng/resources/primeng.min.css",
-            "node_modules/primeflex/primeflex.css"
-          ],
+            "styles": [
+              "src/styles.scss",
+              "src/assets/fonts/font-file.css",
+              "node_modules/primeng/resources/themes/lara-light-blue/theme.css",
+              "node_modules/primeng/resources/primeng.min.css",
+              "node_modules/primeflex/primeflex.css",
+              "node_modules/primeicons/primeicons.css"
+            ],
             "scripts": ["node_modules/topbar/topbar.min.js"]
           },
           "configurations": {
