--- a/angular.json
+++ b/angular.json
@@ -46,12 +46,14 @@
             "tsConfig": "tsconfig.app.json",
             "inlineStyleLanguage": "scss",
             "assets": ["src/favicon.ico", "src/assets"],
-            "styles": ["src/styles.scss", 
-            "src/assets/fonts/font-file.css",
-            "node_modules/primeng/resources/themes/lara-light-blue/theme.css",
-            "node_modules/primeng/resources/primeng.min.css",
-            "node_modules/primeflex/primeflex.css"
-          ],
+            "styles": [
+              "@angular/material/prebuilt-themes/deeppurple-amber.css",
+              "src/styles.scss",
+              "src/assets/fonts/font-file.css",
+              "node_modules/primeng/resources/themes/lara-light-blue/theme.css",
+              "node_modules/primeng/resources/primeng.min.css",
+              "node_modules/primeflex/primeflex.css"
+            ],
             "scripts": ["node_modules/topbar/topbar.min.js"]
           },
           "configurations": {
@@ -106,7 +108,11 @@
             "tsConfig": "tsconfig.spec.json",
             "inlineStyleLanguage": "scss",
             "assets": ["src/favicon.ico", "src/assets"],
-            "styles": ["src/styles.scss", "src/assets/fonts/font-file.css"],
+            "styles": [
+              "@angular/material/prebuilt-themes/deeppurple-amber.css",
+              "src/styles.scss",
+              "src/assets/fonts/font-file.css"
+            ],
             "scripts": ["node_modules/topbar/topbar.min.js"]
           }
         }
