--- a/angular.json
+++ b/angular.json
@@ -47,7 +47,6 @@
             "inlineStyleLanguage": "scss",
             "assets": ["src/favicon.ico", "src/assets"],
             "styles": [
-              "@angular/material/prebuilt-themes/deeppurple-amber.css",
               "src/styles.scss",
               "src/assets/fonts/font-file.css",
               "node_modules/primeng/resources/themes/lara-light-blue/theme.css",
@@ -109,11 +108,7 @@
             "tsConfig": "tsconfig.spec.json",
             "inlineStyleLanguage": "scss",
             "assets": ["src/favicon.ico", "src/assets"],
-            "styles": [
-              "@angular/material/prebuilt-themes/deeppurple-amber.css",
-              "src/styles.scss",
-              "src/assets/fonts/font-file.css"
-            ],
+            "styles": ["src/styles.scss", "src/assets/fonts/font-file.css"],
             "scripts": ["node_modules/topbar/topbar.min.js"]
           }
         }
