--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "apexcharts": "^3.44.0",
     "date-fns": "^2.29.3",
     "jwt-decode": "^4.0.0",
+    "moment": "^2.29.4",
     "ng-apexcharts": "^1.8.0",
     "primeflex": "^3.3.1",
     "primeicons": "^6.0.1",
