--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
     "apexcharts": "^3.44.0",
+    "date-fns": "^2.30.0",
+    "date-fns-tz": "^2.0.0",
     "jwt-decode": "^4.0.0",
     "ng-apexcharts": "^1.8.0",
     "primeflex": "^3.3.1",
