--- a/angular.json
+++ b/angular.json
@@ -47,6 +47,7 @@
             "inlineStyleLanguage": "scss",
             "assets": ["src/favicon.ico", "src/assets"],
             "styles": [
+              "node_modules/angular-calendar/css/angular-calendar.css",
               "src/styles.scss",
               "src/assets/fonts/font-file.css",
               "node_modules/primeng/resources/themes/lara-light-blue/theme.css",
