--- a/package.json
+++ b/package.json
@@ -20,11 +20,12 @@
     "@angular/platform-browser": "^16.2.0",
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
+    "angular-calendar": "^0.31.0",
     "apexcharts": "^3.44.0",
-    "jspdf": "^2.5.1",
-    "jspdf-autotable": "^3.7.1",
     "date-fns": "^2.30.0",
     "date-fns-tz": "^2.0.0",
+    "jspdf": "^2.5.1",
+    "jspdf-autotable": "^3.7.1",
     "jwt-decode": "^4.0.0",
     "ng-apexcharts": "^1.8.0",
     "primeflex": "^3.3.1",
